Search EN for song, then pull audio summary

--- a/example_config.yml
+++ b/example_config.yml
@@ -3,6 +3,8 @@ db:
   database: database_name
   user: username
   password: password
+  port: 3306
+echo_nest_api_key: key
 path:
   mac: /path/to/music/
   pc: C:\different\path\to\music
