--- a/example_config.yml
+++ b/example_config.yml
@@ -5,6 +5,4 @@ db:
   password: password
   port: 3306
 echo_nest_api_key: key
-path:
-  mac: /path/to/music/
-  pc: C:\different\path\to\music
+path: /path/to/music/
